# shadowtrace

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Justfile  Makefile  README.md  go.mod  main.go  main.py  pyproject.toml  shadowtrace.service
.github/workflows/: ci.yml
cmd/: anomaly.go  baseline.go  events.go  oui.go  root.go  run.go  scan.go  version.go
internal/anomaly/: forest.go  forest_test.go
internal/config/: config.go  config_test.go
internal/engine/: presence.go  watch.go
internal/identify/: identify.go  identify_test.go
internal/model/: types.go
internal/notify/: notify.go
internal/oui/: oui.go  oui_test.go
internal/scan/: bluetooth.go  bluetooth_test.go  net.go  variants.go
internal/store/: store.go
scripts/: watch-test.sh
shadowtrace/: __init__.py  app.py
tests/: test_find_adapter.py  test_now.py  test_watch.py
tools/: train.py
