[project]
name = "shadowtrace"
version = "0.1.0"
description = "ShadowTrace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["dbus-next>=0.2.3", "python-dotenv>=1.1.1", "requests>=2.32.5"]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23"]

[project.scripts]
shadowtrace = "shadowtrace.app:cli"
